// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Filter/Desktop Subject grade and target 1`] = `
<div
  style={
    Object {
      "fontFamily": "PT Sans Caption",
    }
  }
>
  <div
    style={
      Object {
        "alignItems": "center",
        "bottom": 0,
        "display": "flex",
        "left": 0,
        "overflow": "auto",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
  >
    <div
      style={
        Object {
          "margin": "auto",
          "maxHeight": "100%",
        }
      }
    >
      <div
        className="filter"
      >
        <div
          className="filter-selection"
          id="grade-filter"
        >
          <div
            className="filter-container-header"
          >
            <label>
              <span
                className="tooltip-label"
                info-label="true"
              >
                Grade
              </span>
            </label>
          </div>
          <div
            className="nested-btn-group btn-group-sm toggle-group vertical"
            data-toggle="buttons"
          >
            <div
              className="btn-group filter-btn-group"
            >
              <button
                aria-checked={false}
                aria-label="Elementry"
                className="btn btn-primary "
                disabled={false}
                onClick={[Function]}
                role="switch"
              >
                Elementry
              </button>
              <button
                aria-checked={false}
                aria-label="High School"
                className="btn btn-primary "
                disabled={false}
                onClick={[Function]}
                role="switch"
              >
                High School
              </button>
              <button
                aria-checked={true}
                aria-label="Middle School"
                className="btn btn-primary active"
                disabled={false}
                onClick={[Function]}
                role="switch"
              >
                Middle School
              </button>
            </div>
          </div>
        </div>
        <div
          className="filter-selection"
          id="subject-filter"
        >
          <div
            className="filter-container-header"
          >
            <label>
              <span
                className="tooltip-label"
                info-label="true"
              >
                Subject
              </span>
            </label>
          </div>
          <div
            className="nested-btn-group btn-group-sm toggle-group vertical"
            data-toggle="buttons"
          >
            <div
              className="btn-group filter-btn-group"
            >
              <button
                aria-checked={false}
                aria-label="English Language Arts"
                className="btn btn-primary "
                disabled={false}
                onClick={[Function]}
                role="switch"
              >
                English Language Arts
              </button>
              <button
                aria-checked={true}
                aria-label="Mathematics"
                className="btn btn-primary active"
                disabled={false}
                onClick={[Function]}
                role="switch"
              >
                Mathematics
              </button>
            </div>
          </div>
        </div>
        <div
          className="filter-selection"
          id="claim-filter"
        >
          <div
            className="filter-container-header"
          >
            <label>
              <span
                className="tooltip-label"
                info-label="true"
              >
                Claim
              </span>
            </label>
          </div>
          <div
            className="nested-btn-group btn-group-sm toggle-group vertical"
            data-toggle="buttons"
          >
            <div
              className="btn-group filter-btn-group"
            >
              <button
                aria-checked={false}
                aria-label="Claim 1"
                className="btn btn-primary "
                disabled={false}
                onClick={[Function]}
                role="switch"
              >
                Claim 1
              </button>
              <button
                aria-checked={true}
                aria-label="Claim 2"
                className="btn btn-primary active"
                disabled={false}
                onClick={[Function]}
                role="switch"
              >
                Claim 2
              </button>
              <button
                aria-checked={false}
                aria-label="Claim 3"
                className="btn btn-primary "
                disabled={false}
                onClick={[Function]}
                role="switch"
              >
                Claim 3
              </button>
            </div>
          </div>
        </div>
        <div
          className="filter-selection"
          id="target-filter"
        >
          <div
            className="filter-container-header"
          >
            <label>
              <span
                className="tooltip-label"
                info-label="true"
              >
                Target
              </span>
            </label>
          </div>
          <div
            className="nested-btn-group btn-group-sm toggle-group vertical"
            data-toggle="buttons"
          >
            <div
              className="btn-group filter-btn-group"
            >
              <button
                aria-checked={false}
                aria-label="Target 1"
                className="btn btn-primary "
                disabled={false}
                onClick={[Function]}
                role="switch"
              >
                Target 1
              </button>
              <button
                aria-checked={true}
                aria-label="Target 2"
                className="btn btn-primary active"
                disabled={false}
                onClick={[Function]}
                role="switch"
              >
                Target 2
              </button>
              <button
                aria-checked={false}
                aria-label="Target 3"
                className="btn btn-primary "
                disabled={false}
                onClick={[Function]}
                role="switch"
              >
                Target 3
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        className="reset-container"
      >
        <button
          className="btn"
          onClick={[Function]}
        >
          Reset
        </button>
      </div>
      <style
        jsx={true}
      >
        
        .filter {
          display: flex;
          flex-wrap: wrap;
        }

        .reset-container {
          text-align: right;
        }
      
      </style>
      <style
        global={true}
        jsx={true}
      >
        
      </style>
    </div>
  </div>
</div>
`;

exports[`Storyshots Filter/Desktop Subject, Grade and Claim 1`] = `
<div
  style={
    Object {
      "fontFamily": "PT Sans Caption",
    }
  }
>
  <div
    style={
      Object {
        "alignItems": "center",
        "bottom": 0,
        "display": "flex",
        "left": 0,
        "overflow": "auto",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
  >
    <div
      style={
        Object {
          "margin": "auto",
          "maxHeight": "100%",
        }
      }
    >
      <div
        className="filter"
      >
        <div
          className="filter-selection"
          id="grade-filter"
        >
          <div
            className="filter-container-header"
          >
            <label>
              <span
                className="tooltip-label"
                info-label="true"
              >
                Grade
              </span>
            </label>
          </div>
          <div
            className="nested-btn-group btn-group-sm toggle-group vertical"
            data-toggle="buttons"
          >
            <div
              className="btn-group filter-btn-group"
            >
              <button
                aria-checked={false}
                aria-label="Elementry"
                className="btn btn-primary "
                disabled={false}
                onClick={[Function]}
                role="switch"
              >
                Elementry
              </button>
              <button
                aria-checked={false}
                aria-label="High School"
                className="btn btn-primary "
                disabled={false}
                onClick={[Function]}
                role="switch"
              >
                High School
              </button>
              <button
                aria-checked={true}
                aria-label="Middle School"
                className="btn btn-primary active"
                disabled={false}
                onClick={[Function]}
                role="switch"
              >
                Middle School
              </button>
            </div>
          </div>
        </div>
        <div
          className="filter-selection"
          id="subject-filter"
        >
          <div
            className="filter-container-header"
          >
            <label>
              <span
                className="tooltip-label"
                info-label="true"
              >
                Subject
              </span>
            </label>
          </div>
          <div
            className="nested-btn-group btn-group-sm toggle-group vertical"
            data-toggle="buttons"
          >
            <div
              className="btn-group filter-btn-group"
            >
              <button
                aria-checked={false}
                aria-label="English Language Arts"
                className="btn btn-primary "
                disabled={false}
                onClick={[Function]}
                role="switch"
              >
                English Language Arts
              </button>
              <button
                aria-checked={true}
                aria-label="Mathematics"
                className="btn btn-primary active"
                disabled={false}
                onClick={[Function]}
                role="switch"
              >
                Mathematics
              </button>
            </div>
          </div>
        </div>
        <div
          className="filter-selection"
          id="claim-filter"
        >
          <div
            className="filter-container-header"
          >
            <label>
              <span
                className="tooltip-label"
                info-label="true"
              >
                Claim
              </span>
            </label>
          </div>
          <div
            className="nested-btn-group btn-group-sm toggle-group vertical"
            data-toggle="buttons"
          >
            <div
              className="btn-group filter-btn-group"
            >
              <button
                aria-checked={false}
                aria-label="Claim 1"
                className="btn btn-primary "
                disabled={false}
                onClick={[Function]}
                role="switch"
              >
                Claim 1
              </button>
              <button
                aria-checked={true}
                aria-label="Claim 2"
                className="btn btn-primary active"
                disabled={false}
                onClick={[Function]}
                role="switch"
              >
                Claim 2
              </button>
              <button
                aria-checked={false}
                aria-label="Claim 3"
                className="btn btn-primary "
                disabled={false}
                onClick={[Function]}
                role="switch"
              >
                Claim 3
              </button>
            </div>
          </div>
        </div>
        <div
          className="message"
        >
          Select a Grade, Subject, and Claim first
          <style
            jsx={true}
          >
            
      .message {
        margin: 20px 0;
        text-align: center;
      }
    
          </style>
        </div>
      </div>
      <div
        className="reset-container"
      >
        <button
          className="btn"
          onClick={[Function]}
        >
          Reset
        </button>
      </div>
      <style
        jsx={true}
      >
        
        .filter {
          display: flex;
          flex-wrap: wrap;
        }

        .reset-container {
          text-align: right;
        }
      
      </style>
      <style
        global={true}
        jsx={true}
      >
        
      </style>
    </div>
  </div>
</div>
`;

exports[`Storyshots Filter/Desktop default 1`] = `
<div
  style={
    Object {
      "fontFamily": "PT Sans Caption",
    }
  }
>
  <div
    style={
      Object {
        "alignItems": "center",
        "bottom": 0,
        "display": "flex",
        "left": 0,
        "overflow": "auto",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
  >
    <div
      style={
        Object {
          "margin": "auto",
          "maxHeight": "100%",
        }
      }
    >
      <div
        className="filter"
      >
        <div
          className="filter-selection"
          id="grade-filter"
        >
          <div
            className="filter-container-header"
          >
            <label>
              <span
                className="tooltip-label"
                info-label="true"
              >
                Grade
              </span>
            </label>
          </div>
          <div
            className="nested-btn-group btn-group-sm toggle-group vertical"
            data-toggle="buttons"
          >
            <div
              className="btn-group filter-btn-group"
            >
              <button
                aria-checked={false}
                aria-label="Elementry"
                className="btn btn-primary "
                disabled={false}
                onClick={[Function]}
                role="switch"
              >
                Elementry
              </button>
              <button
                aria-checked={false}
                aria-label="High School"
                className="btn btn-primary "
                disabled={false}
                onClick={[Function]}
                role="switch"
              >
                High School
              </button>
              <button
                aria-checked={true}
                aria-label="Middle School"
                className="btn btn-primary active"
                disabled={false}
                onClick={[Function]}
                role="switch"
              >
                Middle School
              </button>
            </div>
          </div>
        </div>
        <div
          className="filter-selection"
          id="subject-filter"
        >
          <div
            className="filter-container-header"
          >
            <label>
              <span
                className="tooltip-label"
                info-label="true"
              >
                Subject
              </span>
            </label>
          </div>
          <div
            className="nested-btn-group btn-group-sm toggle-group vertical"
            data-toggle="buttons"
          >
            <div
              className="btn-group filter-btn-group"
            >
              <button
                aria-checked={false}
                aria-label="English Language Arts"
                className="btn btn-primary "
                disabled={false}
                onClick={[Function]}
                role="switch"
              >
                English Language Arts
              </button>
              <button
                aria-checked={true}
                aria-label="Mathematics"
                className="btn btn-primary active"
                disabled={false}
                onClick={[Function]}
                role="switch"
              >
                Mathematics
              </button>
            </div>
          </div>
        </div>
        <div
          className="message"
        >
          Select a Grade and Subject first.
          <style
            jsx={true}
          >
            
      .message {
        margin: 20px 0;
        text-align: center;
      }
    
          </style>
        </div>
      </div>
      <div
        className="reset-container"
      >
        <button
          className="btn"
          onClick={[Function]}
        >
          Reset
        </button>
      </div>
      <style
        jsx={true}
      >
        
        .filter {
          display: flex;
          flex-wrap: wrap;
        }

        .reset-container {
          text-align: right;
        }
      
      </style>
      <style
        global={true}
        jsx={true}
      >
        
      </style>
    </div>
  </div>
</div>
`;
